# notes-app-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/endpoints/: auth.py  notes.py  users.py
app/core/: security.py
app/db/: session.py
app/models/: __init__.py  note.py  user.py
app/schemas/: note.py  user.py
